--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2272,11 +2272,11 @@ I {
 }
 
 .skills_section {
-  --iconD: 6rem;
+  --skillIconD: 6rem;
 }
 .skills_section .icon_container {
-  height: var(--iconD);
-  width: var(--iconD);
+  height: var(--skillIconD);
+  width: var(--skillIconD);
 }
 
 .services_container {
