--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -58,6 +58,11 @@
 
     /*  */
 
+    --SM: 0.25rem;
+    --MD: 0.5rem;
+    --LG: 1rem;
+    --XL: 2rem;
+
     --FS_XS: 0.8rem;
     --FS_S: 1rem;
     --FS_N: 1.4rem;
@@ -2211,10 +2216,14 @@ I {
     width: 100%;
     .section_content {
         position: relative;
+        justify-content: center;
+        align-items: flex-start;
     }
+
     .about_salute {
-        @include flex(column, flex-start, flex-start);
         width: 100%;
+        height: 100%;
+
         .title_salute,
         .title_name {
             text-align: inherit;
@@ -2238,7 +2247,8 @@ I {
             padding: 0 2rem;
         }
         .about_text {
-            font-size: var(--fontSizeXClamp);
+            font-size: var(--fontSizeMClamp);
+            margin-top: var(--XL);
         }
     }
 }
